<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_localization">Localization</string>
    <string name="settings_language">Language</string>
    <string name="settings_preferences">Preferences</string>

    <string name="locale_lang">language</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>

    <string name="app_name">Minsk Airport</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="arrival_tab">Arrival</string>
    <string name="departure_tab">Departure</string>
    <string name="scheduled_label">Scheduled</string>
    <string name="estimated_label">Estimated</string>
    <string name="status_label">Status</string>
    <string name="airline_label">Airline</string>
    <string name="gate_label">Gate</string>
    <string name="registration_label">Registration</string>

    <string name="title_activity_arrival">Arrival</string>
    <string name="title_activity_departure">Departure</string>

    <string name="AIRBORNE">Airborne</string>
    <string name="ARRIVED">Arrived</string>
    <string name="CANCELED">Cancelled</string>
    <string name="CHECKIN">Check-in</string>
    <string name="BOARDING">Boarding</string>
    <string name="BOARDING_FINISHED">Boarding finished</string>
    <string name="LANDED">Landed</string>
    <string name="LEAVING">Leaving</string>
    <string name="DELAYED">Delayed</string>
    <string name="ENROUTE">En Route</string>

    <string name="ABUDHABI">Abu Dhabi</string>
    <string name="ADLERSOCHI">Sochi</string>
    <string name="ALICANTE">Alicante</string>
    <string name="ALMATY">Almaty</string>
    <string name="AMSTERDAM">Amsterdam</string>
    <string name="ANCONA">Ancona</string>
    <string name="ANTALYA">Antalya</string>
    <string name="ARAXOS">Araxos</string>
    <string name="ASHGABAD">Ashgabat</string>
    <string name="ASTANA">Astana</string>
    <string name="ATHENS">Athens</string>
    <string name="BAGHDAD">Baghdad</string>
    <string name="BAKU">Baku</string>
    <string name="BARCELONA">Barcelona</string>
    <string name="BARI">Bari</string>
    <string name="BASRA">Basra</string>
    <string name="BATUMI">Batumi</string>
    <string name="BEAOVAIS">Beaovais</string>
    <string name="BEIJINGPEKING">Beijing</string>
    <string name="BEIRUT">Beirut</string>
    <string name="BELFAST">Belfast</string>
    <string name="BELGOROD">Belgorod</string>
    <string name="BELGRADE">Belgrade</string>
    <string name="BERGAMO">Bergamo</string>
    <string name="BERLINSCHOENEFELD">Berlin (Schönefeld)</string>
    <string name="BODRUMMILAS">Bodrum (Milas)</string>
    <string name="BOURGAS">Bourgas</string>
    <string name="BRATISLAVA">Bratislava</string>
    <string name="BRUSSELSCHARLEROI">Brussels (Charleroi)</string>
    <string name="BUDAPEST">Budapest</string>
    <string name="CALAMOCHA">Calamocha</string>
    <string name="CATANIA">Catania</string>
    <string name="CHEREPOVETS">Cherepovets</string>
    <string name="COLOGNE">Cologne</string>
    <string name="CONSTANTA">Constanta</string>
    <string name="DALAMAN">Dalaman</string>
    <string name="DUBLIN">Dublin</string>
    <string name="EKATERINBURG">Ekaterinburg</string>
    <string name="ENFIDHA">Enfidha</string>
    <string name="EREVAN">Erevan</string>
    <string name="FRANKFURT">Frankfurt</string>
    <string name="GENEVA">Geneva</string>
    <string name="GOMEL">Gomel</string>
    <string name="HANOVER">Hanover</string>
    <string name="HELSINKIVANTAA">Helsinki (Vantaa)</string>
    <string name="HERAKLION">Heraklion</string>
    <string name="HURGHADA">Hurgada</string>
    <string name="ISTANBUL">Istanbul</string>
    <string name="IZMIRADNANMENDERES">Izmir (Adnan Menderes)</string>
    <string name="KALININGRAD">Kaliningrad</string>
    <string name="KARAGANDA">Karaganda</string>
    <string name="KAUNAS">Kaunas</string>
    <string name="KAVALA">Kavala</string>
    <string name="KAZAN">Kazan</string>
    <string name="KERKIRA">Kerkira</string>
    <string name="KHARKOV">Kharkov</string>
    <string name="KHARKIV">Kharkov</string>
    <string name="KHMANSIYSK">Kh-Mansiysk</string>
    <string name="KIEVBORISPOL">Kiev (Borispol)</string>
    <string name="KYIVBORISPOL">Kiev (Borispol)</string>
    <string name="KIEVZHULYANY">Kiev (Zhulyany)</string>
    <string name="KYIVZHULYAN">Kiev (Zhulyany)</string>
    <string name="KLAGENFURT">Klagenfurt</string>
    <string name="KRASNODAR">Krasnodar</string>
    <string name="KRIVOYROG">Krivoy Rog</string>
    <string name="KUSTANAY">Kostanay</string>
    <string name="KUTAISI">Kutaisi</string>
    <string name="LARNACA">Larnaca</string>
    <string name="LONDONGATWICK">London (Gatwick)</string>
    <string name="LUXEMBOURG">Luxembourg</string>
    <string name="LVIV">Lvov</string>
    <string name="MANCHESTER">Manchester</string>
    <string name="MILANMALPENSA">Milan (Malpensa)</string>
    <string name="MONTICHIARI">Montichiari</string>
    <string name="MOSCOWDOMODEDOVO">Moscow (Domodedovo)</string>
    <string name="MOSCOWVNUKOVO">Moscow (Vnukovo)</string>
    <string name="MOSCOWSHEREMETYEVO">Moscow (Sh-vo)</string>
    <string name="MOSCOWZHYKOVSKY">Moscow (Zhukovsky)</string>
    <string name="MUNICH">Munich</string>
    <string name="NICE">Nice</string>
    <string name="NIZHNEKAMSK">Nizhnekamsk</string>
    <string name="NIZHNIYNOVGOROD">N. Novgorod</string>
    <string name="NOVOSIBIRSK">Novosibirsk</string>
    <string name="NOVYURENGOY">Novy Urengoy</string>
    <string name="ODESSA">Odessa</string>
    <string name="OSLO">Oslo</string>
    <string name="PALANGA">Palanga</string>
    <string name="PALMADEMALLORCA">Palma</string>
    <string name="PARISCHARLESDEGAULLE">Paris (Charles de Gaulle)</string>
    <string name="PARMA">Parma</string>
    <string name="PAVLODAR">Pavlodar</string>
    <string name="PODGORICA">Podgorica</string>
    <string name="PRAGUE">Prague</string>
    <string name="RIGA">Riga</string>
    <string name="RIMINI">Rimini</string>
    <string name="RHODES">Rhodos</string>
    <string name="ROMEFIUMICINO">Rome (Fiumicino)</string>
    <string name="ROSTOVONDONPLATOV">Rostov-on-Don (Platov)</string>
    <string name="SALZBURG">Salzburg</string>
    <string name="SAMARA">Samara</string>
    <string name="SHANNON">Shannon</string>
    <string name="SHARMESHEIK">Sharm el-Sheikh</string>
    <string name="SKOPJE">Skopje</string>
    <string name="STPETERSBURGPULKOVO">St.Petersburg (Pulkovo)</string>
    <string name="STOCKHOLMARLANDA">Stockholm (Arlanda)</string>
    <string name="SURGUT">Surgut</string>
    <string name="TASHKENT">Tashkent</string>
    <string name="TBILISI">Tbilisi</string>
    <string name="TEHRAN">Tehran</string>
    <string name="TELAVIV">Tel Aviv</string>
    <string name="THESSALONIKI">Thessaloniki</string>
    <string name="TIRANA">Tirana</string>
    <string name="TIVAT">Tivat</string>
    <string name="TREVIZO">Trevizo</string>
    <string name="TRIESTE">Trieste</string>
    <string name="UFA">Ufa</string>
    <string name="VARNA">Varna</string>
    <string name="VENICE">Venice</string>
    <string name="VERONA">Verona</string>
    <string name="VIENNA">Vienna</string>
    <string name="VILNIUS">Vilnius</string>
    <string name="WARSAW">Warsaw</string>
    <string name="YAROSLAVL">Yaroslavl</string>
    <string name="YEREVAN">Yerevan</string>
    <string name="ZAGREB">Zagreb</string>
    <string name="ZAKINTHOS">Zakinthos</string>
    <string name="ZAPORIZHIA">Zaporozhye</string>
    <string name="ZAPOROZHYE">Zaporozhye</string>
    <string name="ZURICH">Zurich</string>
</resources>
