<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuNow"
        android:title="@string/now"
        android:icon="@drawable/ic_unfold_less_black_24dp">
    </item>
    <item
        android:title="">
    </item>
    <item
        android:id="@+id/menuYesterday"
        android:title="@string/yesterday"
        android:icon="@drawable/ic_arrow_back_black_24dp">
    </item>
    <item
        android:id="@+id/menuToday"
        android:title="@string/today"
        android:icon="@drawable/ic_unfold_more_black_24dp">
    </item>
    <item
        android:id="@+id/menuTomorrow"
        android:title="@string/tomorrow"
        android:icon="@drawable/ic_arrow_forward_black_24dp">
    </item>
    <item
        android:title="">
    </item>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_black_24dp"/>
</menu>