<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="by.airport.airport_master.DepartureActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0099CC"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/departure_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/departure_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp">

            <TableRow android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/departure_company_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/airline_label" />

                <TextView
                    android:id="@+id/departure_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </TableRow>

            <TableRow android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/departure_scheduled_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/scheduled_label" />

                <TextView
                    android:id="@+id/departure_scheduled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </TableRow>

            <TableRow
                android:id="@+id/departure_actual_row"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/departure_actual_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/estimated_label" />

                <TextView
                    android:id="@+id/departure_actual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </TableRow>

            <TableRow
                android:id="@+id/departure_status_row"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/departure_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="10dp"
                    android:text="@string/status_label" />

                <TextView
                    android:id="@+id/departure_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</RelativeLayout>